# Airflow_Docs_LLM_App

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
src/chainlit/: Dockerfile  docker-compose.yml
src/chainlit/chainlit-app/: config.yaml  pyproject.toml  qa.py
src/chainlit/chainlit-app/chainlit_app/: common.py  constants.py
src/chroma-db/: Dockerfile  db_migration.sh  docker-compose.yml  docker_entrypoint.sh  log_config.yml  requirements.txt
src/chroma-db/chroma/ea1ed1fc-59c4-4b89-b6e7-4bd33de422de/: index_metadata.pickle
src/chroma-db/chromadb/: __init__.py  app.py  config.py  errors.py  types.py
src/chroma-db/chromadb/api/: __init__.py  fastapi.py  segment.py  types.py
src/chroma-db/chromadb/db/: __init__.py  base.py  migrations.py  system.py
src/chroma-db/chromadb/db/impl/: sqlite.py  (+1 more)
src/chroma-db/chromadb/ingest/: __init__.py
src/chroma-db/chromadb/segment/: __init__.py
src/chroma-db/chromadb/server/: __init__.py
src/chroma-db/chromadb/telemetry/: __init__.py  events.py  posthog.py
src/chroma-db/chromadb/test/: conftest.py  test_api.py  test_chroma.py  test_client.py  test_config.py  test_multithreaded.py
src/chroma-db/chromadb/utils/: distance_functions.py  messageid.py  read_write_lock.py
src/chroma-db/ea1ed1fc-59c4-4b89-b6e7-4bd33de422de/: index_metadata.pickle
src/llm/: Dockerfile  docker-compose.yml  overrides.json
src/llm/notebooks/: bigbird-base-cpu.ipynb  docs_web_scraping.ipynb  embeddings-db.ipynb  gpt2-cpu.ipynb  langchain.ipynb  llama-cpp-cpu.ipynb  mpt-7b-qa.ipynb  t5-small-cpu.ipynb
(+43 files in other folders)
